Added some more rigid registration utilities to test

--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -55,7 +55,7 @@
     "data_path = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data'\n",
     "from library.atlas.atlas_utilities import register_volume, adjust_volume, \\\n",
     "    affine_transform_point, resample_image, load_transformation, get_min_max_mean, \\\n",
-    "    create_subvolume_from_boundary_vertices\n",
+    "    create_subvolume_from_boundary_vertices, center_images_to_largest_volume, numpy_to_sitk, groupwise_registration\n",
     "\n",
     "from library.controller.sql_controller import SqlController\n"
    ]
@@ -167,56 +167,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def center_images_to_largest_volume(images):\n",
-    "    \"\"\"\n",
-    "    Centers a list of 3D SimpleITK images using the largest-volume image as the reference.\n",
-    "\n",
-    "    Parameters:\n",
-    "        images (List[sitk.Image]): List of 3D SimpleITK Image objects.\n",
-    "\n",
-    "    Returns:\n",
-    "        List[sitk.Image]: List of centered images (same order as input).\n",
-    "    \"\"\"\n",
-    "    if not images:\n",
-    "        raise ValueError(\"No images provided.\")\n",
-    "\n",
-    "    # Compute volumes and find reference image\n",
-    "    volumes = [img.GetSize()[0] * img.GetSize()[1] * img.GetSize()[2] * \n",
-    "               img.GetSpacing()[0] * img.GetSpacing()[1] * img.GetSpacing()[2] for img in images]\n",
-    "    reference_index = volumes.index(max(volumes))\n",
-    "    reference_image = images[reference_index]\n",
-    "\n",
-    "    \"\"\"\n",
-    "    ref_center = sitk.PhysicalPointSource(reference_image.GetPixelID(), reference_image.GetSize(), reference_image.GetOrigin(),\n",
-    "                                          reference_image.GetSpacing(), reference_image.GetDirection())\n",
-    "    ref_center = sitk.CenteredTransformInitializer(reference_image, reference_image,\n",
-    "                                                   sitk.Euler3DTransform(), \n",
-    "                                                   sitk.CenteredTransformInitializerFilter.MOMENTS).GetTranslation()\n",
-    "\n",
-    "    \"\"\"\n",
-    "    centered_images = []\n",
-    "    for i, img in enumerate(images):\n",
-    "        if i == reference_index:\n",
-    "            centered_images.append(img)\n",
-    "            continue\n",
-    "\n",
-    "        # Calculate center transform\n",
-    "        transform = sitk.CenteredTransformInitializer(reference_image, img,\n",
-    "                                                      sitk.Euler3DTransform(), \n",
-    "                                                      sitk.CenteredTransformInitializerFilter.MOMENTS)\n",
-    "\n",
-    "        # Resample image\n",
-    "        resampled = sitk.Resample(img,\n",
-    "                                  reference_image,\n",
-    "                                  transform,\n",
-    "                                  sitk.sitkLinear,\n",
-    "                                  0.0,\n",
-    "                                  img.GetPixelID())\n",
-    "\n",
-    "        centered_images.append(resampled)\n",
-    "\n",
-    "    return centered_images\n",
-    "\n",
     "\n",
     "def resize_image(image, new_size):\n",
     "    \"\"\"\n",
@@ -243,6 +193,7 @@
     "        arr = sitk.GetImageFromArray(arr, isVector=False)\n",
     "        images.append(arr)\n",
     "\n",
+    "    #return images\n",
     "    sizes = [img.GetSize() for img in images]\n",
     "    max_size = np.max(sizes, axis=0)\n",
     "        \n",
@@ -481,28 +432,46 @@
    "outputs": [],
    "source": [
     "#aligned_volumes, final_average = groupwise_register_and_align()\n",
-    "volumes = load_volumes(structure)"
+    "volumes = load_volumes(structure)\n",
+    "for v in volumes:\n",
+    "    print(v.GetSize())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5489cdc",
+   "id": "7d9114fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg_volume = np.mean([sitk.GetArrayFromImage(vol) for vol in aligned_volumes], axis=0)\n",
-    "print(avg_volume.dtype, avg_volume.shape, avg_volume.ndim)"
+    "#centered_images = center_images_to_largest_volume(volumes)\n",
+    "volumes = [sitk.GetArrayFromImage(v) for v in volumes]\n",
+    "avg, transforms = groupwise_registration(volumes, iterations=3)\n",
+    "\n",
+    "print(\"Final average shape:\", avg.shape)\n",
+    "print(\"Transforms (rx, ry, rz, tx, ty, tz):\")\n",
+    "for t in transforms:\n",
+    "    print(np.round(t, 3))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5850dc7",
+   "id": "72ce5225",
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg_volume.dtype"
+    "centered_images = center_images_to_largest_volume(volumes)\n",
+    "registered, consensus, transforms = groupwise_registration(centered_images, max_iterations=3)\n",
+    "for i in registered:\n",
+    "    print(f'Registered shape: {i.shape}, dtype: {i.dtype}')\n",
+    "print(\"Registration complete.\")\n",
+    "\n",
+    "result = np.mean(registered, axis=0)\n",
+    "print(f\"Result shape: {result.shape}, dtype: {result.dtype}\")\n",
+    "ids, counts = np.unique(result, return_counts=True)\n",
+    "print(f\"Unique ids in result: {ids}, counts: {counts}\")\n",
+    "print(f\"Consensus shape: {consensus.shape}, dtype: {consensus.dtype}\")"
    ]
   },
   {
@@ -513,19 +482,19 @@
    "outputs": [],
    "source": [
     "allen_id = 255\n",
-    "arr = volumes[0]\n",
-    "z = arr.shape[2] // 2\n",
+    "#arr = volumes[0]\n",
+    "volume = consensus.copy()\n",
+    "z = volume.shape[2] // 2\n",
     "print('midpoint=',z)\n",
-    "volume = arr.copy()\n",
     "#volume = adjust_volume(volume, 255)\n",
-    "volume = gaussian(volume, 4.0)            \n",
-    "upper = np.quantile(volume, 0.8)\n",
+    "#volume = gaussian(volume, 4.0)            \n",
+    "upper = np.quantile(volume, 0.75)\n",
     "print('upper', upper)\n",
-    "upper = 100\n",
+    "#upper = 100\n",
     "print(np.mean(volume), np.min(volume), np.max(volume))\n",
-    "volume[(volume > upper) ] = allen_id\n",
-    "volume[(volume != allen_id)] = 0\n",
-    "volume = volume.astype(np.uint32)\n",
+    "#volume[(volume > upper) ] = allen_id\n",
+    "#volume[(volume != allen_id)] = 0\n",
+    "#volume = volume.astype(np.uint32)\n",
     "\n",
     "slice = volume[:,:,z]\n",
     "plt.imshow(slice, cmap='gray')"
