Using Sitk for resampling structures into Allen space

--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bdf185d3",
    "metadata": {},
    "outputs": [],
@@ -42,10 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bfec3576",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "PIPELINE_ROOT = Path('./').absolute().parents[1]\n",
     "PIPELINE_ROOT = PIPELINE_ROOT.as_posix()\n",
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "72fe5678",
    "metadata": {},
    "outputs": [],
@@ -416,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "14e8fd2a",
    "metadata": {},
    "outputs": [],
@@ -610,19 +618,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ec2ae3d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0 811]\n",
+      "[6866526 7918242]\n",
+      "(192, 207, 372) uint32 434.3452844170433 0 811\n"
+     ]
+    }
+   ],
    "source": [
-    "animal = 'ALLEN771602'\n",
-    "structure = 'cerebellum'\n",
+    "animal = 'MD585'\n",
+    "structure = 'IC'\n",
     "structure_path = os.path.join(data_path, animal, 'structure', f'{structure}.npy')\n",
     "arr = np.load(structure_path)\n",
     "ids, counts = np.unique(arr, return_counts=True)\n",
-    "if len(ids) < 10:\n",
-    "    print(ids)\n",
-    "    print(counts)\n",
+    "print(ids)\n",
+    "print(counts)\n",
     "print(arr.shape, arr.dtype, np.mean(arr), np.min(arr), np.max(arr))"
    ]
   },
