Got registered masks and origins working, somewhat

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -82,10 +82,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moving_name = 'MD594'\n",
+    "moving_name = 'AtlasV8'\n",
     "fixed_name = 'Allen'\n",
-    "moving_all = list_coms(moving_name, scaling_factor=1)\n",
-    "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
+    "moving_all = fetch_coms(moving_name, scaling_factor=10)\n",
+    "fixed_all = list_coms(fixed_name, scaling_factor=10)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('RtTg', 'AP')\n",
     "#bad_keys = ('RtTg',)\n",
@@ -165,20 +165,23 @@
     "#transformation_matrix = np.hstack([transformation_matrix, t])\n",
     "#transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
     "#print(transformation_matrix)\n",
-    "structure = 'SC'\n",
+    "structure = '7n_L'\n",
     "try:\n",
     "    com = moving_all[structure]\n",
     "except KeyError:\n",
     "    structure = common_keys[0]\n",
     "    com = moving_all[structure]\n",
-    "#com = [1095, 392, 519]\n",
-    "print(f'{moving_name} {structure} non trans {np.round(np.array(com))}')\n",
+    "comtfm = np.array([1045.3749678051674, 569.1966231966117, 351.76850947323493])\n",
     "transformed_structure = affine_transform_point(com, transformation_matrix)\n",
     "\n",
+    "print(f'{moving_name} {structure} non trans {np.round(np.array(com))}')\n",
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "diff = transformed_structure - fixed_all[structure]\n",
-    "print(f'{moving_name}->{fixed_name} error {structure} {diff}')"
+    "comdiff = comtfm - fixed_all[structure]\n",
+    "\n",
+    "print(f'{moving_name}->{fixed_name} error {structure} {diff}')\n",
+    "print(f'{moving_name}->{fixed_name} tfm error {structure} {comdiff}')"
    ]
   },
   {
