--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -615,14 +615,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animal = 'MD585'\n",
-    "structure = 'IC'\n",
-    "structure_path = os.path.join(data_path, animal, 'structure', f'{structure}.npy')\n",
-    "arr = np.load(structure_path)\n",
-    "ids, counts = np.unique(arr, return_counts=True)\n",
-    "print(ids)\n",
-    "print(counts)\n",
-    "print(arr.shape, arr.dtype, np.mean(arr), np.min(arr), np.max(arr))"
+    "animals = ['MD585','MD589', 'MD594', 'AtlasV8']\n",
+    "structure = 'SC'\n",
+    "\n",
+    "for animal in animals:\n",
+    "    structure_path = os.path.join(data_path, animal, 'structure', f'{structure}.npy')\n",
+    "    origin_path = os.path.join(data_path, animal, 'origin', f'{structure}.txt')\n",
+    "    com_path = os.path.join(data_path, animal, 'com', f'{structure}.txt')\n",
+    "\n",
+    "    com = np.loadtxt(com_path)\n",
+    "    origin = np.loadtxt(origin_path)\n",
+    "    arr = np.load(structure_path)\n",
+    "    ids, counts = np.unique(arr, return_counts=True)\n",
+    "    if len(ids) == 1:\n",
+    "        print(animal, 'com', com, 'origin', origin)\n",
+    "        print('volume is all black')\n",
+    "        print(arr.shape, arr.dtype, np.mean(arr), np.min(arr), np.max(arr))"
    ]
   },
   {
@@ -661,7 +669,7 @@
    "source": [
     "z = arr.shape[2] // 2\n",
     "volume = arr.copy()\n",
-    "volume = adjust_volume(volume, 255)\n",
+    "#volume = adjust_volume(volume, 255)\n",
     "slice = volume[:,:,z].astype(np.uint32)\n",
     "plt.imshow(slice, cmap='gray')"
    ]
