Cleaning up and organizing code for create atlas

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -20,31 +20,15 @@
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from collections import OrderedDict\n",
-    "from scipy.ndimage import affine_transform\n",
-    "from skimage import measure\n",
     "import SimpleITK as sitk\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "PIPELINE_ROOT = Path('./').absolute().parents[1]\n",
     "PIPELINE_ROOT = PIPELINE_ROOT.as_posix()\n",
     "sys.path.append(PIPELINE_ROOT)\n",
-    "print(PIPELINE_ROOT)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45da981f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "print(PIPELINE_ROOT)"
    ]
   },
   {
@@ -57,10 +41,10 @@
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
     "from library.atlas.atlas_utilities import affine_transform_point, get_affine_transformation, \\\n",
-    "fetch_coms, list_coms, compute_affine_transformation, affine_transform_volume\n",
+    "    fetch_coms, list_coms, compute_affine_transformation, affine_transform_volume\n",
     "from library.atlas.brain_structure_manager import BrainStructureManager\n",
     "from library.utilities.utilities_process import M_UM_SCALE, SCALING_FACTOR, random_string, \\\n",
-    "read_image, write_image\n"
+    "    read_image, write_image\n"
    ]
   },
   {
@@ -165,13 +149,13 @@
     "#transformation_matrix = np.hstack([transformation_matrix, t])\n",
     "#transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
     "#print(transformation_matrix)\n",
-    "structure = '7n_L'\n",
+    "structure = 'SC'\n",
     "try:\n",
     "    com = moving_all[structure]\n",
     "except KeyError:\n",
     "    structure = common_keys[0]\n",
     "    com = moving_all[structure]\n",
-    "comtfm = np.array([1045.3749678051674, 569.1966231966117, 351.76850947323493])\n",
+    "comtfm = np.array([824.6051918494063, 80.83004570523167, 363.4390121956811])\n",
     "transformed_structure = affine_transform_point(com, transformation_matrix)\n",
     "\n",
     "print(f'{moving_name} {structure} non trans {np.round(np.array(com))}')\n",
