Added a new column for slide czi to tif, to take care of duplicates

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -229,14 +229,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpath = \"/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/MOSQ/preps/C1/thumbnail\"\n",
-    "files = sorted(os.listdir(mpath))\n",
-    "for file in files[0:10]:\n",
-    "    filepath = os.path.join(mpath, file)\n",
-    "    image = read_image(filepath)\n",
-    "    ids, counts = np.unique(image, return_counts=True)\n",
-    "    print(len(ids))\n",
-    " "
+    "fields_we_are_changing = ['active', 'scene_number']\n",
+    "changed_fields = ['copy_copy', 'active']\n",
+    "changed_fields.remove('copy_copy')\n",
+    "\n",
+    "# Using sets for efficient intersection\n",
+    "if set(fields_we_are_changing).intersection(changed_fields) == set():\n",
+    "    print(\"empy set\")\n",
+    "else:\n",
+    "    print(f\"found {set(fields_we_are_changing).intersection(changed_fields)}\")\n",
+    "print(changed_fields)"
    ]
   }
  ],
