Switching to nii in registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5093a700",
+   "id": "cb6e3833",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aca36b4",
+   "id": "3a6873f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "47395fcf",
+   "id": "e5272179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "91446180",
+   "id": "5fc50bf0",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "7e91f416",
+   "id": "dadd0216",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "6776c188",
+   "id": "2b2fcc45",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4f37280b",
+   "id": "b0df13fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "cad04ac0",
+   "id": "8e7375c3",
    "metadata": {},
    "outputs": [
     {
@@ -390,6 +390,31 @@
     "fixed_idx_cont = fixed.TransformPhysicalPointToContinuousIndex(phys_fixed)\n",
     "fixed_idx = tuple(int(round(x)) for x in fixed_idx_cont)\n",
     "print(\"fixed integer index =\", fixed_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "5c01606e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.0, 0.0, 0.0)\n",
+      "(1820, 1000, 1140)\n"
+     ]
+    }
+   ],
+   "source": [
+    "allenpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen/Allen_10.0x10.0x10.0um_sagittal.tif'\n",
+    "allen = sitk.ReadImage(allenpath)\n",
+    "print(allen.GetOrigin())\n",
+    "print(allen.GetSize())\n",
+    "allen.SetSpacing((10.0, 10.0, 10.0))\n",
+    "outpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen/Allen_10.0x10.0x10.0um_sagittal.nii'\n",
+    "sitk.WriteImage(allen, outpath)"
    ]
   }
  ],
