--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,23 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
+    "import SimpleITK as sitk\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -40,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -235,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb6e3833",
+   "id": "8292a90a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6873f1",
+   "id": "82d0fa8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e5272179",
+   "execution_count": null,
+   "id": "7ee5d0f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,50 +275,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "5fc50bf0",
+   "execution_count": null,
+   "id": "e519be1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moving_phys\n",
-      "[[9588.475 8378.5   3040.   ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import SimpleITK as sitk\n",
-    "\n",
-    "moving_points_vox = np.array([[29503,25780,152]])\n",
-    "\n",
-    "# your spacings (microns)\n",
-    "moving_spacing = (0.325, 0.325, 20)\n",
-    "fixed_spacing  = (10.0, 10.0, 10.0)\n",
-    "transform_path = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_10.0x10.0x10.0um.tfm\"\n",
-    "sitk_transform = sitk.ReadTransform(transform_path)\n"
+    "allen_size = (728,400,456)\n",
+    "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
+    "fixed.SetOrigin((0,0,0))\n",
+    "fixed.SetSpacing((um,um,um))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "dadd0216",
+   "execution_count": null,
+   "id": "2c6d0e92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moving physical (µm) = (10340.85, 10802.35, 5040.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
+    "moving_name = \"ALLEN771602\"\n",
+    "um = 25.0\n",
+    "transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
+    "sitk_transform = sitk.ReadTransform(transform_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff4ead20",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# user values\n",
-    "moving_index = (31818, 33238, 252)\n",
-    "moving_spacing = (0.325, 0.325, 20.0)   # µm\n",
+    "moving_index = (315,247,361)\n",
+    "moving_spacing = (25, 25, 25.0)   # µm\n",
     "# If you have the moving image file, read it instead of hardcoding spacing/origin/direction:\n",
     "# moving = sitk.ReadImage(\"moving_original.nii\")\n",
     "# moving_spacing = moving.GetSpacing(); moving_origin = moving.GetOrigin(); moving_direction = moving.GetDirection()\n",
@@ -336,55 +321,19 @@
     "phys_moving = (moving_index[0]*moving_spacing[0],\n",
     "               moving_index[1]*moving_spacing[1],\n",
     "               moving_index[2]*moving_spacing[2])\n",
-    "print(\"moving physical (µm) =\", phys_moving)"
+    "print(\"moving physical (µm) =\", phys_moving)\n",
+    "phys_fixed = sitk_transform.GetInverse().TransformPoint(phys_moving)\n",
+    "print(\"fixed physical (µm) =\", phys_fixed)\n",
+    "fixed_index = fixed.TransformPhysicalPointToIndex(phys_fixed)\n",
+    "print('moved to fixed',fixed_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "2b2fcc45",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fixed physical (µm) = (11602.976802772431, 9197.629888424286, 5074.2571923470605)\n"
-     ]
-    }
-   ],
-   "source": [
-    "phys_fixed = sitk_transform.TransformPoint(phys_moving)\n",
-    "print(\"fixed physical (µm) =\", phys_fixed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "b0df13fc",
+   "execution_count": null,
+   "id": "7e08f71e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "allen_size = (1820,1000,1140)\n",
-    "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
-    "fixed.SetOrigin((0,0,0))\n",
-    "fixed.SetSpacing((1,1,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "8e7375c3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fixed integer index = (11603, 9198, 5074)\n"
-     ]
-    }
-   ],
    "source": [
     "# spacing = 10\n",
     "fixed_idx_cont = fixed.TransformPhysicalPointToContinuousIndex(phys_fixed)\n",
@@ -394,26 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "5c01606e",
+   "execution_count": null,
+   "id": "af25391d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0.0, 0.0, 0.0)\n",
-      "(1820, 1000, 1140)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "allenpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen/Allen_10.0x10.0x10.0um_sagittal.tif'\n",
+    "allenpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/ALLEN771602/ALLEN771602_25.0x25.0x25.0um_sagittal.tif'\n",
     "allen = sitk.ReadImage(allenpath)\n",
     "print(allen.GetOrigin())\n",
     "print(allen.GetSize())\n",
-    "allen.SetSpacing((10.0, 10.0, 10.0))\n",
-    "outpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen/Allen_10.0x10.0x10.0um_sagittal.nii'\n",
+    "allen.SetSpacing((25.0, 25.0, 25.0))\n",
+    "outpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen/ALLEN771602_25.0x25.0x25.0um_sagittal.nii'\n",
     "sitk.WriteImage(allen, outpath)"
    ]
   }
