Working sitk point registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -275,12 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e519be1c",
    "metadata": {},
    "outputs": [],
    "source": [
     "allen_size = (728,400,456)\n",
+    "um = 25.0\n",
     "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
     "fixed.SetOrigin((0,0,0))\n",
     "fixed.SetSpacing((um,um,um))"
@@ -288,27 +297,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2c6d0e92",
    "metadata": {},
    "outputs": [],
    "source": [
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "moving_name = \"ALLEN771602\"\n",
-    "um = 25.0\n",
     "transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
     "sitk_transform = sitk.ReadTransform(transform_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ff4ead20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moving physical (µm) = (6100, 2500, 5975.0)\n",
+      "fixed physical (µm) = (4976.1276664325, 2742.71642273837, 5654.655155199297)\n",
+      "moved to fixed space 25um (199, 110, 226)\n",
+      "test moving (199.04510665729998, 109.7086569095348, 226.18619999999999)\n"
+     ]
+    }
+   ],
    "source": [
+    "#This works!\n",
     "# user values\n",
     "moving_index = (315,247,361)\n",
+    "moving_index = (244, 100, 239)\n",
     "moving_spacing = (25, 25, 25.0)   # µm\n",
     "# If you have the moving image file, read it instead of hardcoding spacing/origin/direction:\n",
     "# moving = sitk.ReadImage(\"moving_original.nii\")\n",
@@ -317,7 +338,7 @@
     "# If you have the moving image object:\n",
     "# phys_moving = moving.TransformIndexToPhysicalPoint(tuple(int(i) for i in moving_index))\n",
     "\n",
-    "# If you DON'T have the image object and assume origin=(0,0,0) & direction=identity:\n",
+    "# put them into microns\n",
     "phys_moving = (moving_index[0]*moving_spacing[0],\n",
     "               moving_index[1]*moving_spacing[1],\n",
     "               moving_index[2]*moving_spacing[2])\n",
@@ -325,7 +346,9 @@
     "phys_fixed = sitk_transform.GetInverse().TransformPoint(phys_moving)\n",
     "print(\"fixed physical (µm) =\", phys_fixed)\n",
     "fixed_index = fixed.TransformPhysicalPointToIndex(phys_fixed)\n",
-    "print('moved to fixed',fixed_index)"
+    "print('moved to fixed space 25um',fixed_index)\n",
+    "test_moving = (4976.1276664325/25, 2742.71642273837/25, 5654.655/25)\n",
+    "print('test moving', test_moving)"
    ]
   },
   {
