--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -283,34 +283,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "e519be1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "allen_size = (728,400,456)\n",
-    "um = 25.0\n",
+    "allen_size = (1820,1000,1140)\n",
     "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
     "fixed.SetOrigin((0,0,0))\n",
-    "fixed.SetSpacing((um,um,um))"
+    "fixed.SetSpacing((10.0, 10.0, 10.0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "2c6d0e92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HDF5-DIAG: Error detected in HDF5 (1.10.4) thread 0:\n",
+      "  #000: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5F.c line 370 in itk_H5Fis_hdf5(): unable open file\n",
+      "    major: File accessibilty\n",
+      "    minor: Not an HDF5 file\n",
+      "  #001: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5Fint.c line 802 in itk_H5F__is_hdf5(): unable to open file\n",
+      "    major: Low-level I/O\n",
+      "    minor: Unable to initialize object\n",
+      "  #002: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5FD.c line 734 in itk_H5FD_open(): open failed\n",
+      "    major: Virtual File Layer\n",
+      "    minor: Unable to initialize object\n",
+      "  #003: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5FDsec2.c line 346 in H5FD_sec2_open(): unable to open file: name = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0\n",
+      "    major: File accessibilty\n",
+      "    minor: Unable to open file\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Exception thrown in SimpleITK ReadTransform: /src/SimpleElastix/build/ITK/Modules/IO/TransformInsightLegacy/src/itkTxtTransformIO.cxx:123:\nitk::ERROR: TxtTransformIOTemplate(0x62bb922832e0): The file could not be opened for read access \nFilename: \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [34]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m transform_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(regpath, moving_name, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmoving_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_Allen_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mx\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mx\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mum.tfm\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(transform_path)\n\u001b[0;32m----> 6\u001b[0m sitk_transform \u001b[38;5;241m=\u001b[39m \u001b[43msitk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mReadTransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtransform_path\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/share/pipeline/lib/python3.10/site-packages/SimpleITK/SimpleITK.py:5391\u001b[0m, in \u001b[0;36mReadTransform\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m   5384\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mReadTransform\u001b[39m(filename):\n\u001b[1;32m   5385\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   5386\u001b[0m \u001b[38;5;124;03m    ReadTransform(std::string const & filename) -> Transform\u001b[39;00m\n\u001b[1;32m   5387\u001b[0m \n\u001b[1;32m   5388\u001b[0m \n\u001b[1;32m   5389\u001b[0m \n\u001b[1;32m   5390\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 5391\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_SimpleITK\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mReadTransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Exception thrown in SimpleITK ReadTransform: /src/SimpleElastix/build/ITK/Modules/IO/TransformInsightLegacy/src/itkTxtTransformIO.cxx:123:\nitk::ERROR: TxtTransformIOTemplate(0x62bb922832e0): The file could not be opened for read access \nFilename: \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm\""
+     ]
+    }
+   ],
    "source": [
+    "um = 25.0\n",
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
-    "moving_name = \"ALLEN771602\"\n",
+    "moving_name = \"DK55\"\n",
     "transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
+    "print(transform_path)\n",
     "sitk_transform = sitk.ReadTransform(transform_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "ff4ead20",
    "metadata": {},
    "outputs": [
@@ -318,25 +358,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moving physical (µm) = (6100, 2500, 5975.0)\n",
-      "fixed physical (µm) = (4976.1276664325, 2742.71642273837, 5654.655155199297)\n",
-      "moved to fixed space 25um (199, 110, 226)\n",
-      "test moving (199.04510665729998, 109.7086569095348, 226.18619999999999)\n"
+      "moving physical (µm) = (9815.65, 4195.1, 4320)\n",
+      "fixed physical (µm) = [5483.  394. 5382.]\n",
+      "moved to fixed space 10.0um (548, 39, 538)\n"
      ]
     }
    ],
    "source": [
     "#This works!\n",
     "# user values\n",
-    "moving_index = (315,247,361)\n",
-    "moving_index = (244, 100, 239)\n",
-    "moving_spacing = (25, 25, 25.0)   # µm\n",
-    "# If you have the moving image file, read it instead of hardcoding spacing/origin/direction:\n",
-    "# moving = sitk.ReadImage(\"moving_original.nii\")\n",
-    "# moving_spacing = moving.GetSpacing(); moving_origin = moving.GetOrigin(); moving_direction = moving.GetDirection()\n",
-    "\n",
-    "# If you have the moving image object:\n",
-    "# phys_moving = moving.TransformIndexToPhysicalPoint(tuple(int(i) for i in moving_index))\n",
+    "moving_index = (30202, 12908, 216)\n",
+    "moving_spacing = (0.325, 0.325, 20)   # µm\n",
     "\n",
     "# put them into microns\n",
     "phys_moving = (moving_index[0]*moving_spacing[0],\n",
@@ -344,11 +376,9 @@
     "               moving_index[2]*moving_spacing[2])\n",
     "print(\"moving physical (µm) =\", phys_moving)\n",
     "phys_fixed = sitk_transform.GetInverse().TransformPoint(phys_moving)\n",
-    "print(\"fixed physical (µm) =\", phys_fixed)\n",
+    "print(\"fixed physical (µm) =\", np.round(phys_fixed))\n",
     "fixed_index = fixed.TransformPhysicalPointToIndex(phys_fixed)\n",
-    "print('moved to fixed space 25um',fixed_index)\n",
-    "test_moving = (4976.1276664325/25, 2742.71642273837/25, 5654.655/25)\n",
-    "print('test moving', test_moving)"
+    "print(f'moved to fixed space {um}um {fixed_index}')\n"
    ]
   },
   {
