Took out iteration info on register volume

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -283,20 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "e519be1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "allen_size = (1820,1000,1140)\n",
+    "um = 25.0\n",
+    "allen_size = (728,400,456)\n",
     "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
     "fixed.SetOrigin((0,0,0))\n",
-    "fixed.SetSpacing((10.0, 10.0, 10.0))"
+    "fixed.SetSpacing((um, um, um))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "2c6d0e92",
    "metadata": {},
    "outputs": [
@@ -306,41 +307,9 @@
      "text": [
       "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HDF5-DIAG: Error detected in HDF5 (1.10.4) thread 0:\n",
-      "  #000: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5F.c line 370 in itk_H5Fis_hdf5(): unable open file\n",
-      "    major: File accessibilty\n",
-      "    minor: Not an HDF5 file\n",
-      "  #001: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5Fint.c line 802 in itk_H5F__is_hdf5(): unable to open file\n",
-      "    major: Low-level I/O\n",
-      "    minor: Unable to initialize object\n",
-      "  #002: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5FD.c line 734 in itk_H5FD_open(): open failed\n",
-      "    major: Virtual File Layer\n",
-      "    minor: Unable to initialize object\n",
-      "  #003: /src/SimpleElastix/build/ITK/Modules/ThirdParty/HDF5/src/itkhdf5/src/H5FDsec2.c line 346 in H5FD_sec2_open(): unable to open file: name = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0\n",
-      "    major: File accessibilty\n",
-      "    minor: Unable to open file\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Exception thrown in SimpleITK ReadTransform: /src/SimpleElastix/build/ITK/Modules/IO/TransformInsightLegacy/src/itkTxtTransformIO.cxx:123:\nitk::ERROR: TxtTransformIOTemplate(0x62bb922832e0): The file could not be opened for read access \nFilename: \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [34]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m transform_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(regpath, moving_name, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmoving_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_Allen_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mx\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mx\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mum.tfm\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(transform_path)\n\u001b[0;32m----> 6\u001b[0m sitk_transform \u001b[38;5;241m=\u001b[39m \u001b[43msitk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mReadTransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtransform_path\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/share/pipeline/lib/python3.10/site-packages/SimpleITK/SimpleITK.py:5391\u001b[0m, in \u001b[0;36mReadTransform\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m   5384\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mReadTransform\u001b[39m(filename):\n\u001b[1;32m   5385\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   5386\u001b[0m \u001b[38;5;124;03m    ReadTransform(std::string const & filename) -> Transform\u001b[39;00m\n\u001b[1;32m   5387\u001b[0m \n\u001b[1;32m   5388\u001b[0m \n\u001b[1;32m   5389\u001b[0m \n\u001b[1;32m   5390\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 5391\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_SimpleITK\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mReadTransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Exception thrown in SimpleITK ReadTransform: /src/SimpleElastix/build/ITK/Modules/IO/TransformInsightLegacy/src/itkTxtTransformIO.cxx:123:\nitk::ERROR: TxtTransformIOTemplate(0x62bb922832e0): The file could not be opened for read access \nFilename: \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm\""
-     ]
     }
    ],
    "source": [
-    "um = 25.0\n",
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "moving_name = \"DK55\"\n",
     "transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
@@ -350,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "ff4ead20",
    "metadata": {},
    "outputs": [
@@ -358,16 +327,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moving physical (µm) = (9815.65, 4195.1, 4320)\n",
-      "fixed physical (µm) = [5483.  394. 5382.]\n",
-      "moved to fixed space 10.0um (548, 39, 538)\n"
+      "moving physical (µm) = (11038.300000000001, 4195.1, 4760)\n",
+      "fixed physical (µm) = [6827.  193. 5840.]\n",
+      "moved to fixed space 25.0um (273, 8, 234)\n"
      ]
     }
    ],
    "source": [
     "#This works!\n",
     "# user values\n",
-    "moving_index = (30202, 12908, 216)\n",
+    "moving_index = (33964, 12908, 238)\n",
     "moving_spacing = (0.325, 0.325, 20)   # µm\n",
     "\n",
     "# put them into microns\n",
