Set spacing to 1

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,34 @@
     "    # Compute RMS error\n",
     "    rmse = np.sqrt(np.mean(np.sum((dst_pts - dst_pred)**2, axis=1)))\n",
     "\n",
-    "    return T, rmse, dst_pred\n"
+    "    return T, rmse, dst_pred\n",
+    "\n",
+    "def make_homogeneous(mat3):\n",
+    "    M = np.eye(4, dtype=float)\n",
+    "    M[:3, :3] = mat3\n",
+    "    return M\n",
+    "\n",
+    "def diag4(spacing):\n",
+    "    s = np.array(spacing, dtype=float)\n",
+    "    D = np.eye(4, dtype=float)\n",
+    "    D[0,0], D[1,1], D[2,2] = s[0], s[1], s[2]\n",
+    "    return D\n",
+    "\n",
+    "def sitk_affine_to_matrix4x4(tx: sitk.Transform):\n",
+    "    params = list(tx.GetParameters())\n",
+    "    \n",
+    "    # First 9 values → affine matrix\n",
+    "    A = np.array(params[:9]).reshape(3,3)\n",
+    "\n",
+    "    # Last 3 values → translation\n",
+    "    t = np.array(params[9:12]).reshape(3)\n",
+    "\n",
+    "    # Build homogeneous 4×4\n",
+    "    M = np.eye(4)\n",
+    "    M[:3,:3] = A\n",
+    "    M[:3, 3] = t\n",
+    "\n",
+    "    return M"
    ]
   },
   {
@@ -283,21 +310,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "e519be1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spacing (25.0, 25.0, 25.0)\n",
+      "origin (0.0, 0.0, 0.0)\n",
+      "dir (1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)\n"
+     ]
+    }
+   ],
    "source": [
     "um = 25.0\n",
     "allen_size = (728,400,456)\n",
     "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
     "fixed.SetOrigin((0,0,0))\n",
-    "fixed.SetSpacing((um, um, um))"
+    "fixed.SetSpacing((um, um, um))\n",
+    "print('spacing', fixed.GetSpacing())\n",
+    "print('origin', fixed.GetOrigin())\n",
+    "print('dir', fixed.GetDirection())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "id": "2c6d0e92",
    "metadata": {},
    "outputs": [
@@ -319,7 +359,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
+   "id": "ed760be0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9513378941293442,\n",
+       " 0.10081010685825635,\n",
+       " 0.021425821234862266,\n",
+       " -0.0731772113785215,\n",
+       " 0.9074205026148587,\n",
+       " -0.04519962555198247,\n",
+       " -0.007890964253193659,\n",
+       " 0.060355795584759744,\n",
+       " 0.9443613268111726,\n",
+       " 4577.995544758792,\n",
+       " 3392.1664049586807,\n",
+       " -803.6829635483717)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sitk_transform.GetParameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "0fe99f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9.50000e-01,  1.00000e-01,  2.00000e-02,  4.57800e+03],\n",
+       "       [-7.00000e-02,  9.10000e-01, -5.00000e-02,  3.39217e+03],\n",
+       "       [-1.00000e-02,  6.00000e-02,  9.40000e-01, -8.03680e+02],\n",
+       "       [ 0.00000e+00,  0.00000e+00,  0.00000e+00,  1.00000e+00]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = sitk_affine_to_matrix4x4(sitk_transform)\n",
+    "np.round(A,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "ff4ead20",
    "metadata": {},
    "outputs": [
@@ -327,17 +424,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moving physical (µm) = (11038.300000000001, 1930.5, 4760)\n",
-      "fixed physical (µm) = [ 7048. -2278.  6004.]\n",
-      "moved to fixed space 25.0um (282, -91, 240)\n"
+      "moving physical (µm) = (9125.0, 6375.0, 2350.0)\n",
+      "fixed physical (µm) = [7442. 7491. 2436.]\n",
+      "moved to fixed space 25.0um (298, 300, 97)\n"
      ]
     }
    ],
    "source": [
     "#This works!\n",
     "# user values\n",
-    "moving_index = (33964, 5940, 238)\n",
-    "moving_spacing = (0.325, 0.325, 20)   # µm\n",
+    "moving_index = (365, 255, 94)\n",
+    "moving_spacing = (um, um, um)   # µm\n",
     "\n",
     "# put them into microns\n",
     "phys_moving = (moving_index[0]*moving_spacing[0],\n",
@@ -352,15 +449,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
+   "id": "b64cb85b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "phys fixed (4770.5216014316875, 4976.411208108028, -615.2729119730598)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fiducial points from the moving brain\n",
+    "scaled = [[phys_moving[0]/25, phys_moving[1]/25, phys_moving[2]/25]]\n",
+    "for phys_m in scaled:\n",
+    "    phys_f = sitk_transform.TransformPoint(phys_m)\n",
+    "    #idx_f = fixed.TransformPhysicalPointToIndex(phys_f)\n",
+    "    print(\"phys fixed\", phys_f)\n",
+    "    #print(\"fixed_index:\", idx_f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "7e08f71e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# spacing = 10\n",
-    "fixed_idx_cont = fixed.TransformPhysicalPointToContinuousIndex(phys_fixed)\n",
-    "fixed_idx = tuple(int(round(x)) for x in fixed_idx_cont)\n",
-    "print(\"fixed integer index =\", fixed_idx)"
+    "fiducials_vox = np.array([(28037, 25992,122)])\n",
+    "print(fiducials_vox.shape)\n",
+    "s_m = (0.325, 0.325, 20.0)    # moving spacing in microns (given)\n",
+    "s_affine = (25.0, 25.0, 25.0)  # spacing that affine expects / was computed with\n",
+    "# If you know the fixed spacing, set it; otherwise set to None\n",
+    "s_f = (25.0, 25.0, 25.0)  # example fixed spacing (change if different) or None\n",
+    "\n",
+    "# Suppose A is the 4x4 affine you have (replace with your matrix)\n",
+    "# Here we create an example identity-like A for demonstration:\n",
+    "#A = np.eye(4)  # replace with your real 4x4 affine matrix\n",
+    "A = sitk_affine_to_matrix4x4(sitk_transform)\n",
+    "\n",
+    "# Build scale matrices (homogeneous)\n",
+    "S_m = diag4(s_m)\n",
+    "S_aff = diag4(s_affine)\n",
+    "S_f = diag4(s_f) if s_f is not None else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "88907c65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[28037, 25992,   122]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fiducial_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a3a66cd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4405.474587253084, 4555.097711818389, 3088.2144534508207)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "moving_spacing = (0.325, 0.325, 20.0)   # microns\n",
+    "moving_origin = (0.0, 0.0, 0.0)     # set from your image if available\n",
+    "moving_direction = (1.0,0.0,0.0, 0.0,1.0,0.0, 0.0,0.0,1.0)  # 3x3 row-major; set from image if available\n",
+    "\n",
+    "# Load the transform saved from registration (example .tfm)\n",
+    "transform = sitk_transform\n",
+    "\n",
+    "# helper to convert index -> physical (microns)\n",
+    "def index_to_physical(index, spacing, origin=(0,0,0), direction=(1,0,0, 0,1,0, 0,0,1)):\n",
+    "    idx = np.asarray(index, dtype=float)\n",
+    "    sp = np.asarray(spacing, dtype=float)\n",
+    "    # apply spacing\n",
+    "    scaled = idx * sp  # in microns from image origin-aligned axes\n",
+    "    # apply direction 3x3\n",
+    "    dir_mat = np.array(direction).reshape(3,3)\n",
+    "    phys_rel = dir_mat.dot(scaled)\n",
+    "    origin = np.asarray(origin, dtype=float)\n",
+    "    return tuple(origin + phys_rel)\n",
+    "\n",
+    "# convert and transform\n",
+    "physical_points = [index_to_physical(pt, moving_spacing, moving_origin, moving_direction)\n",
+    "                   for pt in fiducial_indices]\n",
+    "\n",
+    "# apply transform (SimpleITK expects points in same physical units as images; here microns)\n",
+    "transformed_physical = [transform.GetInverse().TransformPoint(p) for p in physical_points]\n",
+    "print(transformed_physical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "26c4214b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9112.025, 8447.4, 2440.0)]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "physical_points"
    ]
   },
   {
